Examen/lb-2fe-be-sg/security-group.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  Plantilla grupos de seguridad SSH, HTTP y Tomcat.

Parameters:
  VPC:
    Description: VPC
    Type: AWS::EC2::VPC::Id

Resources:
  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  FrontendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Front
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref HttpSecurityGroup

  HttpSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  BackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Tomcat
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref FrontendSecurityGroup

Outputs:
  SshSecurityGroup:
    Description: SSH group
    Value: !Ref SshSecurityGroup
    Export:
      Name: SshSecurityGroup

  HttpSecurityGroup:
    Description: HTTP group
    Value: !Ref HttpSecurityGroup
    Export:
      Name: HttpSecurityGroup

  BackendSecurityGroup:
    Description: Backend group
    Value: !Ref BackendSecurityGroup
    Export:
      Name: BackendSecurityGroup

  FrontendSecurityGroup:
    Description: Frontend group
    Value: !Ref FrontendSecurityGroup
    Export:
      Name: FrontendSecurityGroup
